--- a/example/rbac/prometheus-operator-crd/prometheus-operator-crd-cluster-roles.yaml
+++ b/example/rbac/prometheus-operator-crd/prometheus-operator-crd-cluster-roles.yaml
@@ -7,7 +7,7 @@ metadata:
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
     rbac.authorization.k8s.io/aggregate-to-view: "true"
 rules:
-- apiGroups: ["monitoring.coreos.com"]
+- apiGroups: ["azmonitoring.coreos.com"]
   resources: ["alertmanagers", "alertmanagerconfigs", "prometheuses", "prometheusrules", "servicemonitors", "podmonitors", "probes"]
   verbs: ["get", "list", "watch"]
 ---
@@ -19,6 +19,6 @@ metadata:
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
     rbac.authorization.k8s.io/aggregate-to-admin: "true"
 rules:
-- apiGroups: ["monitoring.coreos.com"]
+- apiGroups: ["azmonitoring.coreos.com"]
   resources: ["alertmanagers", "alertmanagerconfigs", "prometheuses", "prometheusrules", "servicemonitors", "podmonitors", "probes"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
