--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
-  name: prometheusagents.monitoring.coreos.com
+  name: prometheusagents.azmonitoring.coreos.com
 spec:
-  group: monitoring.coreos.com
+  group: azmonitoring.coreos.com
   names:
     categories:
     - prometheus-operator
@@ -2606,11 +2606,11 @@ spec:
                     Probe or PrometheusRule object.
                   properties:
                     group:
-                      default: monitoring.coreos.com
+                      default: azmonitoring.coreos.com
                       description: Group of the referent. When not specified, it defaults
-                        to `monitoring.coreos.com`
+                        to `azmonitoring.coreos.com`
                       enum:
-                      - monitoring.coreos.com
+                      - azmonitoring.coreos.com
                       type: string
                     name:
                       description: Name of the referent. When not set, all resources
