--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_servicemonitors.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_servicemonitors.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
-  name: servicemonitors.monitoring.coreos.com
+  name: servicemonitors.azmonitoring.coreos.com
 spec:
-  group: monitoring.coreos.com
+  group: azmonitoring.coreos.com
   names:
     categories:
     - prometheus-operator
