--- a/example/thanos/prometheus-rule.yaml
+++ b/example/thanos/prometheus-rule.yaml
@@ -1,4 +1,4 @@
-apiVersion: monitoring.coreos.com/v1
+apiVersion: azmonitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   creationTimestamp: null
