--- a/example/user-guides/alerting/prometheus-example-rules.yaml
+++ b/example/user-guides/alerting/prometheus-example-rules.yaml
@@ -1,4 +1,4 @@
-apiVersion: monitoring.coreos.com/v1
+apiVersion: azmonitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   creationTimestamp: null
