--- a/test/framework/resources/prometheus-operator-mutatingwebhook.yaml
+++ b/test/framework/resources/prometheus-operator-mutatingwebhook.yaml
@@ -9,11 +9,11 @@ webhooks:
         namespace: default
         path: /admission-prometheusrules/mutate
     failurePolicy: Fail
-    name: prometheusrulemutate.monitoring.coreos.com
+    name: prometheusrulemutate.azmonitoring.coreos.com
     namespaceSelector: {}
     rules:
       - apiGroups:
-          - monitoring.coreos.com
+          - azmonitoring.coreos.com
         apiVersions:
           - '*'
         operations:
