--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
-  name: alertmanagerconfigs.azmonitoring.coreos.com
+  name: alertmanagerconfigs.monitoring.coreos.com
 spec:
-  group: azmonitoring.coreos.com
+  group: monitoring.coreos.com
   names:
     categories:
     - prometheus-operator
