--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
     operator.prometheus.io/version: 0.68.0
-  name: alertmanagerconfigs.azmonitoring.coreos.com
+  name: alertmanagerconfigs.monitoring.coreos.com
 spec:
-  group: azmonitoring.coreos.com
+  group: monitoring.coreos.com
   names:
     categories:
     - prometheus-operator
