--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_servicemonitors.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_servicemonitors.yaml
@@ -612,8 +612,8 @@ spec:
                       type: object
                     trackTimestampsStaleness:
                       description: "TrackTimestampsStaleness whether Prometheus tracks
-                        staleness of the metrics that have an explicit timestamps
-                        present in scraped data. \n It requires Prometheus >= v2.48.0."
+                        staleness of the metrics that have an explicit timestamp present
+                        in scraped data. \n It requires Prometheus >= v2.48.0."
                       type: boolean
                   type: object
                 type: array
