--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -1552,7 +1552,7 @@
                     "type": "object"
                   },
                   "trackTimestampsStaleness": {
-                    "description": "TrackTimestampsStaleness whether Prometheus tracks staleness of the metrics that have an explicit timestamps present in scraped data. \n It requires Prometheus >= v2.48.0.",
+                    "description": "TrackTimestampsStaleness whether Prometheus tracks staleness of the metrics that have an explicit timestamp present in scraped data. \n It requires Prometheus >= v2.48.0.",
                     "type": "boolean"
                   }
                 },
