--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_prometheusagents.yaml
@@ -5170,8 +5170,9 @@ spec:
                   \n If unset, Prometheus uses its default value. \n It requires Prometheus
                   >= v2.48.0."
                 items:
-                  description: ScrapeProtocol represents supported protocol for scraping
-                    metrics.
+                  description: 'ScrapeProtocol represents a protocol used by Prometheus
+                    for scraping metrics. Supported values are: * `OpenMetricsText0.0.1`
+                    * `OpenMetricsText1.0.0` * `PrometheusProto` * `PrometheusText0.0.4`'
                   enum:
                   - PrometheusProto
                   - OpenMetricsText0.0.1
@@ -5179,7 +5180,7 @@ spec:
                   - PrometheusText0.0.4
                   type: string
                 type: array
-                x-kubernetes-list-type: atomic
+                x-kubernetes-list-type: set
               scrapeTimeout:
                 description: Number of seconds to wait until a scrape request times
                   out.
