--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -1380,9 +1380,9 @@
                     "type": "string"
                   },
                   "scrapeProtocols": {
-                    "description": "The protocols to negotiate during a scrape. It tells clients what protocol are accepted by Prometheus and with what weight (most wanted is first). Supported values (case sensitive): PrometheusProto, OpenMetricsText0.0.1, OpenMetricsText1.0.0, PrometheusText0.0.4. \n If unset, Prometheus uses its default value: [\"OpenMetricsText1.0.0\",\"OpenMetricsText0.0.1\",\"PrometheusText0.0.4\"] \n It requires Prometheus >= v2.48.0.",
+                    "description": "The protocols to negotiate during a scrape. It tells clients what protocol are accepted by Prometheus and with what weight (most wanted is first). \n If unset, Prometheus uses its default value: [\"OpenMetricsText1.0.0\",\"OpenMetricsText0.0.1\",\"PrometheusText0.0.4\"] \n It requires Prometheus >= v2.48.0.",
                     "items": {
-                      "description": "ScrapeProtocol represents supported protocol for scraping metrics.",
+                      "description": "ScrapeProtocol represents a protocol used by Prometheus for scraping metrics. Supported values are: * `OpenMetricsText0.0.1` * `OpenMetricsText1.0.0` * `PrometheusProto` * `PrometheusText0.0.4`",
                       "enum": [
                         "PrometheusProto",
                         "OpenMetricsText0.0.1",
@@ -1392,7 +1392,7 @@
                       "type": "string"
                     },
                     "type": "array",
-                    "x-kubernetes-list-type": "atomic"
+                    "x-kubernetes-list-type": "set"
                   },
                   "scrapeTimeout": {
                     "description": "ScrapeTimeout is the number of seconds to wait until a scrape request times out.",
