--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
@@ -5166,10 +5166,8 @@ spec:
               scrapeProtocols:
                 description: "The protocols to negotiate during a scrape. It tells
                   clients what protocol are accepted by Prometheus and with what weight
-                  (most wanted is first). Supported values (case sensitive): PrometheusProto,
-                  OpenMetricsText0.0.1, OpenMetricsText1.0.0, PrometheusText0.0.4.
-                  \n If unset, Prometheus uses its default value. \n It requires Prometheus
-                  >= v2.48.0."
+                  (most wanted is first). \n If unset, Prometheus uses its default
+                  value. \n It requires Prometheus >= v2.48.0."
                 items:
                   description: 'ScrapeProtocol represents a protocol used by Prometheus
                     for scraping metrics. Supported values are: * `OpenMetricsText0.0.1`
