chore: update documentation
Signed-off-by: dongjiang1989 <dongjiang1989@126.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -13782,7 +13782,8 @@ spec:
                     trackTimestampsStaleness:
                       description: TrackTimestampsStaleness whether Prometheus tracks
                         staleness of the metrics that have an explicit timestamps
-                        present in scraped data. It requires Prometheus >= v2.48.0.
+                        present in scraped data. Has no effect if `honorTimestamps`
+                        is false. It requires Prometheus >= v2.48.0.
                       type: boolean
                   type: object
                 type: array
@@ -34577,9 +34578,10 @@ spec:
                     type: string
                 type: object
               trackTimestampsStaleness:
-                description: "TrackTimestampsStaleness whether Prometheus tracks staleness
+                description: TrackTimestampsStaleness whether Prometheus tracks staleness
                   of the metrics that have an explicit timestamp present in scraped
-                  data. \n It requires Prometheus >= v2.48.0."
+                  data. Has no effect if `honorTimestamps` is false. It requires Prometheus
+                  >= v2.48.0.
                 type: boolean
             type: object
         required:
