--- a/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
@@ -643,7 +643,8 @@ spec:
                     trackTimestampsStaleness:
                       description: TrackTimestampsStaleness whether Prometheus tracks
                         staleness of the metrics that have an explicit timestamps
-                        present in scraped data. It requires Prometheus >= v2.48.0.
+                        present in scraped data. Has no effect if `honorTimestamps`
+                        is false. It requires Prometheus >= v2.48.0.
                       type: boolean
                   type: object
                 type: array
