chore: update documentation by code review
Signed-off-by: dongjiang1989 <dongjiang1989@126.com>

--- a/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
@@ -612,9 +612,9 @@ spec:
                           type: string
                       type: object
                     trackTimestampsStaleness:
-                      description: "TrackTimestampsStaleness whether Prometheus tracks
-                        staleness of the metrics that have an explicit timestamp present
-                        in scraped data. \n It requires Prometheus >= v2.48.0."
+                      description: "`trackTimestampsStaleness` defines whether Prometheus
+                        tracks staleness of the metrics that have an explicit timestamp
+                        present in scraped data. \n It requires Prometheus >= v2.48.0."
                       type: boolean
                   type: object
                 type: array
