--- a/bundle.yaml
+++ b/bundle.yaml
@@ -13780,10 +13780,10 @@ spec:
                           type: string
                       type: object
                     trackTimestampsStaleness:
-                      description: TrackTimestampsStaleness whether Prometheus tracks
+                      description: "TrackTimestampsStaleness whether Prometheus tracks
                         staleness of the metrics that have an explicit timestamps
                         present in scraped data. Has no effect if `honorTimestamps`
-                        is false. It requires Prometheus >= v2.48.0.
+                        is false. \n It requires Prometheus >= v2.48.0."
                       type: boolean
                   type: object
                 type: array
@@ -35204,9 +35204,9 @@ spec:
                           type: string
                       type: object
                     trackTimestampsStaleness:
-                      description: "TrackTimestampsStaleness whether Prometheus tracks
-                        staleness of the metrics that have an explicit timestamp present
-                        in scraped data. \n It requires Prometheus >= v2.48.0."
+                      description: "`trackTimestampsStaleness` defines whether Prometheus
+                        tracks staleness of the metrics that have an explicit timestamp
+                        present in scraped data. \n It requires Prometheus >= v2.48.0."
                       type: boolean
                   type: object
                 type: array
