--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_podmonitors.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_podmonitors.yaml
@@ -640,10 +640,10 @@ spec:
                           type: string
                       type: object
                     trackTimestampsStaleness:
-                      description: TrackTimestampsStaleness whether Prometheus tracks
+                      description: "TrackTimestampsStaleness whether Prometheus tracks
                         staleness of the metrics that have an explicit timestamps
                         present in scraped data. Has no effect if `honorTimestamps`
-                        is false. It requires Prometheus >= v2.48.0.
+                        is false. \n It requires Prometheus >= v2.48.0."
                       type: boolean
                   type: object
                 type: array
