--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -1550,6 +1550,10 @@
                       }
                     },
                     "type": "object"
+                  },
+                  "trackTimestampsStaleness": {
+                    "description": "TrackTimestampsStaleness whether Prometheus tracks staleness of the metrics that have an explicit timestamp present in scraped data. Has no effect if `honorTimestamps` is false. It requires Prometheus >= v2.48.0.",
+                    "type": "boolean"
                   }
                 },
                 "type": "object"
