--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -26,6 +26,7 @@ jobs:
         go-version: '${{ env.golang-version }}'
         check-latest: true
     - run: make --always-make format generate && git diff --exit-code
+
   check-docs:
     runs-on: ubuntu-latest
     name: Check Documentation formatting and links
@@ -38,6 +39,7 @@ jobs:
         go-version: '${{ env.golang-version }}'
         check-latest: true
     - run: make check-docs
+
   check-golang:
     runs-on: ubuntu-latest
     name: Golang linter
@@ -49,11 +51,14 @@ jobs:
         with:
           go-version: '${{ env.golang-version }}'
           check-latest: true
+      - name: go.mod
+        run: make tidy && git diff --exit-code
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3.7.0
         with:
           version: v1.55.2
           args: --timeout 10m0s
+
   check-metrics:
     runs-on: ubuntu-latest
     name: Check prometheus metrics
@@ -66,6 +71,7 @@ jobs:
         go-version: '${{ env.golang-version }}'
         check-latest: true
     - run: make check-metrics
+
   build:
     runs-on: ${{ matrix.os }}
     strategy:
