Pushover device support (#5479)
* Enable pushover device support

---------

Signed-off-by: Simon Pasquier <spasquie@redhat.com>
Co-authored-by: Simon Pasquier <spasquie@redhat.com>

--- a/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
+++ b/jsonnet/prometheus-operator/alertmanagerconfigs-crd.json
@@ -2301,6 +2301,10 @@
                           "items": {
                             "description": "PushoverConfig configures notifications via Pushover. See https://prometheus.io/docs/alerting/latest/configuration/#pushover_config",
                             "properties": {
+                              "device": {
+                                "description": "The name of a device to send the notification to",
+                                "type": "string"
+                              },
                               "expire": {
                                 "description": "How long your notification will continue to be retried for, unless the user acknowledges the notification.",
                                 "pattern": "^(([0-9]+)y)?(([0-9]+)w)?(([0-9]+)d)?(([0-9]+)h)?(([0-9]+)m)?(([0-9]+)s)?(([0-9]+)ms)?$",
