scripts: pkg/prometheus/promcfg.go
prom's scrapeConfig supports providing a specific job-name; scrapeConfigs from CRD no longer bound to `scrapeConfig/<namespace>/<metadata.name>`

Fixes #6147

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -34250,6 +34250,9 @@ spec:
                   - url
                   type: object
                 type: array
+              jobName:
+                description: The job name assigned to scraped metrics by default.
+                type: string
               keepDroppedTargets:
                 description: "Per-scrape limit on the number of targets dropped by
                   relabeling that will be kept in memory. 0 means no limit. \n It
