--- a/jsonnet/prometheus-operator/scrapeconfigs-crd.json
+++ b/jsonnet/prometheus-operator/scrapeconfigs-crd.json
@@ -1157,6 +1157,10 @@
                     },
                     "type": "array"
                   },
+                  "jobName": {
+                    "description": "The job name assigned to scraped metrics by default.",
+                    "type": "string"
+                  },
                   "keepDroppedTargets": {
                     "description": "Per-scrape limit on the number of targets dropped by relabeling that will be kept in memory. 0 means no limit. \n It requires Prometheus >= v2.47.0.",
                     "format": "int64",
